# quenta

./: .gitignore  LICENSE  README.md  pyproject.toml  settings.local.toml.example  settings.toml
.github/workflows/: tests.yml
notebooks/: demo.ipynb
scripts/: nb_strip_metadata.py  pipeline.py  setup-git.sh  setup-venv.sh
src/quenta/: __init__.py  settings.py  verify.py
src/quenta/analysis/: __init__.py  regression.py
src/quenta/io/: __init__.py  datasets.py
src/quenta/plots/: __init__.py  figures.py
src/quenta/utils/: __init__.py  _reexport.py  fitting.py  plotting.py  stats.py
tests/: conftest.py  test_layering.py  test_pipeline.py  test_settings.py  test_utils_fitting.py  test_utils_stats.py
